[project]
name = "template-agent"
version = "0.1.0"
description = "Template for build agent, using langgraph"
authors = [
    {name = "Rogerio Campos",email = "rogerio.campos07@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "langchain (>=1.3.9,<2.0.0)",
    "langgraph (>=1.2.5,<2.0.0)",
    "langchain-google-genai (>=4.2.5,<5.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.15.17,<0.16.0)",
    "pytest (>=9.1.0,<10.0.0)",
    "taskipy (>=1.14.1,<2.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)"
]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[tool.coverage.run]
disable_warnings = ["no-data-collected"]

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'

pre_test = 'task lint'
test = 'pytest -s -x --cov=template_agent -vv'
post_test = 'coverage html'
